# mark1-translate

./: LICENSE  README.md  pyproject.toml
mark1_translate/: __init__.py  mark1.py
tests/: test_mark1_translate.py
