[tool.poetry]
name = "mark1-translate"
version = "0.1.3"
description = "Google Translate based api"
authors = ["cgmark101 <cgmark101@gmail.com>"]
readme = "README.md"
repository="https://github.com/cgmark101/mark1-translate

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
